--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
             <section>
 				
 				<div>
-					<iframe src='' style='width:90%;height:100%;'></iframe>
-					    <script>
-        					fetch('https://api.github.com/repos/agalea91/crypto-monetary-base/contents/charts/relative_coin_supply_pct_estimates.html')
-            					.then(function(response) {
-                				return response.json();
-            					}).then(function(data) {
-                				iframe = document.getElementById('github-iframe');
-                				iframe.src = 'http://r.xnet.world:9010/;base64,' + encodeURIComponent(data['content']);
-            					});
-    					   </script>
+					<iframe id="github-iframe" src=""></iframe>
+<script>
+    fetch('http://r.xnet.world:9010/')
+        .then(function(response) {
+            return response.json();
+        }).then(function(data) {
+            var iframe = document.getElementById('github-iframe');
+            iframe.src = 'data:text/html;base64,' + encodeURIComponent(data['content']);
+        });
+</script>
 				</div>
             </section>
             <section>
