--- a/index.html
+++ b/index.html
@@ -76,16 +76,8 @@
             <section>
 				
 				<div>
-					<iframe id="github-iframe" src=""></iframe>
-<script>
-    fetch('http://r.xnet.world:9010/')
-        .then(function(response) {
-            return response.json();
-        }).then(function(data) {
-            var iframe = document.getElementById('github-iframe');
-            iframe.src = 'data:text/html;base64,' + encodeURIComponent(data['content']);
-        });
-</script>
+   					<object data="http://r.xnet.world:9010/" type="text/html">
+    					</object>
 				</div>
             </section>
             <section>
