--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <section>
 				
 				<div>
-   					<object data="http://r.xnet.world:9010/" type="text/html">
-    					</object>
+ <iframe frameborder=0 style="min-width: 200px; width: 60%; height: 460px;" scrolling="no" seamless="seamless" srcdoc='<html><body><style type="text/css">.gist .gist-data { height: 400px; }</style>
+														       <script src="http://r.xnet.world:9010/"></script></body></html>'></iframe>
 				</div>
             </section>
             <section>
